# tradelink

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
app/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_cart_cartitem.py
devs/: admin.py  models.py  tasks.py
getlinked_rcb/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
realtime_chats/: apps.py  urls.py  views.py
rename_me/: settings.py
templates/: order_notification.html
tradelink/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
utils/: constants.py  mails.py  utils.py
